--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6",
+    "react-dropzone": "^14.2.3",
     "typescript": "4.9.4"
   },
   "devDependencies": {
