--- a/package.json
+++ b/package.json
@@ -26,7 +26,5 @@
     "react-dropzone": "^14.2.3",
     "typescript": "4.9.4"
   },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.26"
-  }
+  "devDependencies": {}
 }
