--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "bcrypt": "^5.1.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "formik": "^2.2.9",
+    "mongoose": "^6.9.0",
     "next": "13.1.1",
     "nookies": "^2.5.2",
     "react": "18.2.0",
@@ -30,5 +32,7 @@
     "typescript": "4.9.4",
     "yup": "^0.32.11"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0"
+  }
 }
