--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -22,8 +23,10 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "formik": "^2.2.9",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "next": "13.1.1",
+    "next-auth": "^4.19.0",
     "next-connect": "^0.13.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
