--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "bcrypt": "^5.1.0",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
     "formidable-serverless": "^1.1.1",
     "formik": "^2.2.9",
     "mongoose": "^6.9.0",
@@ -36,6 +34,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1"
   }
 }
