--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@google-cloud/storage": "^6.9.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
-    "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "bcrypt": "^5.1.0",
-    "formidable-serverless": "^1.1.1",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "mongoose": "^6.9.0",
     "next": "13.1.1",
