--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "13.1.1",
     "next-auth": "^4.19.0",
     "next-connect": "^0.13.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
